kubernetes/apps/song-list/staging/back.deployment-overlay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-backend
  labels:
    app: song-list-backend
spec:
  template:
    spec:
      containers:
        - name: app
