kubernetes/apps/song-list/staging/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-backend
  labels:
    app: song-list-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-list-backend
  template:
    metadata:
      labels:
        app: song-list-backend
    spec:
      containers:
        - name: app
          image: song-list-backend
          ports:
            - containerPort: 3000
