kubernetes/apps/song-list/staging/front.deployment-overlay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-frontend
spec:
  template:
    spec:
      containers:
        - name: app
