kubernetes/apps/song-list/staging/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-frontend
  labels:
    app: song-list-frontend
spec:
  template:
    spec:
      containers:
        - name: app
          image: song-list-frontend
          ports:
            - containerPort: 4400
          env: null
