kubernetes/apps/song-list/staging/sidekiq.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-sidekiq
  labels:
    app: song-list-sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-list-sidekiq
  template:
    metadata:
      labels:
        app: song-list-sidekiq
    spec:
      containers:
        - name: app
          image: song-list-backend
          command: ["bundle", "exec", "sidekiq"]
